styles: im going to add styles for desktops. I resize the image, i set nowrap in header tag to prevent it from jumping to the next line and i remove too the hamburguer icon

--- a/css/header.css
+++ b/css/header.css
@@ -66,3 +66,15 @@ header {
     padding: 40px;
   }
 }
+@media (min-width: 992px) {
+  header {
+    flex-wrap: nowrap;
+    padding: 40px;
+  }
+  img {
+    max-width: 30%;
+  }
+  .hamburguerMenu {
+    display: none;
+  }
+}
